--- a/Task-5/office1.ipynb
+++ b/Task-5/office1.ipynb
@@ -340,8 +340,8 @@
     "            logits = fc(lstm_out)                           # project to vocab\n",
     "\n",
     "            B, T, V = logits.shape                          # shapes\n",
-    "            logits_flat = logits.view(B*T, V)               # flatten logits\n",
-    "            targets_flat = yb.view(B*T)                     # flatten targets\n",
+    "            logits_flat = logits.view(B*T, V)               \n",
+    "            targets_flat = yb.view(B*T)                     \n",
     "\n",
     "            loss = criterion(logits_flat, targets_flat)     # compute loss\n",
     "            loss.backward()                                 # backprop\n",
